# PimBloomFilters

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  bloom_filters.cpp  bloom_filters_common.h  bloom_filters_dpu.h  bloom_filters_dpu1.c  bloom_filters_dpu2.c  bloom_filters_host.cpp  dtrace.sh  main_test1.cpp  main_test2.cpp  pim_rankset.cpp  readme.md  run_bench1_perfs.sh  run_bench2_perfs.sh  test.hpp  unit_test1.cpp
benchmarks/: CMakeLists.txt  benchmark1.cpp  benchmark2.cpp  benchmark_utils.hpp
notebooks/: PimBloomFiltersPerfs.ipynb  PimFilterVsSyncCache.ipynb  bench1_perfs.csv  bench2_perfs.csv
src/: CMakeLists.txt  Makefile  benchmark1.cpp  bloom_filter.hpp  bloom_filter_factory.cpp  bloom_filters.cpp  bloom_filters_common.h  pim_api.hpp  pim_bloom_filter.cpp  pim_bloom_filter_common.h  pim_common.h  pim_rankset.cpp  run_utils.hpp  standard_bloom_filter.cpp  unit_test1.cpp  work_queue.hpp
src/dpu/: CMakeLists.txt  bloom_filters_dpu.c  bloom_filters_dpu.cpp  bloom_filters_dpu.h  bloom_filters_dpu1.c  bloom_filters_dpu2.c  dpu_utils.h  murmur3.c  murmur3.h
tests/: CMakeLists.txt  tests_utils.hpp  unit_test1.cpp  unit_test2.cpp
